[package]
name = "shm_ring"
version = "0.3.2"
edition = "2021"
description = "A single producer, single consumer lockless ring buffer for message passing between shared memory"
authors = ["Thomas Johnson <tomjohn@crabfeeder.org>"]
license = "MIT"
repository = "https://github.com/tomjohns/shm_ring.git"

[dependencies]

[features]
avx2 = []
